<resources>
    <string name="app_name">BIP</string>
    <string name="home">首页</string>
    <string name="bangumi">番剧</string>
    <string name="collection">收藏</string>
    <string name="error_toast">我指腚是不行了</string>
    <string name="search_desc">搜索框</string>
    <string name="search_hint">我总想搜点什么</string>
    <string name="cancel">取消</string>
    <string name="mine">我的</string>
    <string name="history">历史记录</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="username_hint">你的手机号/邮箱</string>
    <string name="password_hint">请输入密码</string>
    <string name="video_url_parse_error">视频信息解析错误</string>
    <string name="video_load_error">视频加载错误</string>
    <string name="download">下载</string>
    <string name="accounts">账号</string>
    <string name="setting">设置</string>
    <string name="source_browser">源网页</string>
    <string name="source_refresh">刷新视频源</string>
    <string name="multiWindow_not_allow">分屏模式下无法进行此操作</string>
    <string name="uri_null_tip">Uri是空的</string>
    <string name="check_update">检查更新</string>
    <string name="thanks_opensource">开源鸣谢</string>
    <string name="update_backup">使用备用地址检查更新</string>
    <string name="refresh_qr">刷新二维码</string>
    <string name="scan_confirm">已扫描确认</string>
    <string name="login_success">登录成功</string>
    <string name="get_qrcode_fail">获取二维码链接失败</string>
    <string name="click_again_back">再次返回退出应用</string>
    <string name="developing">开发中</string>
    <string name="downloading">正在下载</string>
    <string name="downloaded">下载完成</string>
    <string name="prepare">正在准备</string>
    <string name="paused">暂停</string>
    <string name="error">错误</string>
    <string name="download_task">%d下载任务</string>
    <string name="delete_record">删除记录</string>
    <string name="delete_record_confirm">确认要删除这个记录吗?</string>
    <string name="delete">删除</string>
    <string name="password_login">账号密码登录</string>
    <string name="use_mediaCodec">使用MediaCodec硬解</string>
    <string name="hour_ago">小时前</string>
    <string name="minute_ago">分钟前</string>
    <string name="reply">共计%d条回复</string>
    <string name="sub_reply_content"><![CDATA[<font color="#29B6F6">%s</font>%s]]></string>
    <string name="no_more">我真的一滴都没有了</string>
    <string name="sub_reply_page">第%d页</string>
    <string name="collapse">收起</string>
    <string name="use_exoPlayer">使用ExoPlayer</string>
    <string name="logout">退出登录</string>
    <string name="play_item_index">第%d话</string>
    <string name="full_default">详情页默认全屏</string>
    <string name="no_comment">没有评论啊</string>
    <string name="comment">评论</string>
    <string name="hot_search">热门搜索</string>
    <string name="hot_search_placeholder">%1$d、%2$s</string>
    <string name="search_history">搜索历史</string>
    <string name="clear_history">清空历史</string>
</resources>