<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/video_play_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:focusable="true"
        android:textColor="@color/color_2A364C"
        android:textIsSelectable="true"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="在公共场合唱歌" />

    <TextView
        android:id="@+id/video_play_des"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:focusable="true"
        android:textColor="@color/color_575F75"
        android:textIsSelectable="true"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/video_play_title"
        app:layout_constraintTop_toBottomOf="@id/video_play_title"
        tools:text="一些莫名其妙的简介" />

    <TextView
        android:id="@+id/video_play_collection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_play_detail_action"
        android:drawablePadding="6dp"
        android:focusable="true"
        android:gravity="center"
        android:minWidth="72dp"
        android:text="@string/collection"
        app:drawableTopCompat="@drawable/ic_collection_state"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/video_play_download"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/video_play_des" />


    <TextView
        android:id="@+id/video_play_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_play_detail_action"
        android:drawablePadding="6dp"
        android:focusable="true"
        android:gravity="center"
        android:minWidth="72dp"
        android:text="@string/download"
        app:drawableTopCompat="@drawable/ic_download"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/video_play_browser"
        app:layout_constraintStart_toEndOf="@id/video_play_collection"
        app:layout_constraintTop_toTopOf="@id/video_play_collection" />


    <TextView
        android:id="@+id/video_play_browser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_play_detail_action"
        android:drawablePadding="6dp"
        android:focusable="true"
        android:gravity="center"
        android:minWidth="72dp"
        android:text="@string/source_browser"
        app:drawableTopCompat="@drawable/ic_browser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/video_play_refresh"
        app:layout_constraintStart_toEndOf="@id/video_play_download"
        app:layout_constraintTop_toTopOf="@id/video_play_collection" />

    <TextView
        android:id="@+id/video_play_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_play_detail_action"
        android:drawablePadding="6dp"
        android:focusable="true"
        android:gravity="center"
        android:minWidth="72dp"
        android:text="@string/source_refresh"
        app:drawableTopCompat="@drawable/ic_refresh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/video_play_comment"
        app:layout_constraintStart_toEndOf="@id/video_play_browser"
        app:layout_constraintTop_toTopOf="@id/video_play_collection" />

    <TextView
        android:id="@+id/video_play_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_play_detail_action"
        android:drawablePadding="6dp"
        android:focusable="true"
        android:gravity="center"
        android:minWidth="72dp"
        android:text="@string/comment"
        app:drawableTopCompat="@drawable/ic_video_comment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/video_play_refresh"
        app:layout_constraintTop_toTopOf="@id/video_play_collection" />
</androidx.constraintlayout.widget.ConstraintLayout>