<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_search_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="search_history_header,search_history_clear,search_history_rv" />

    <TextView
        android:id="@+id/search_history_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="16dp"
        android:text="@string/search_history"
        android:textColor="@color/color_292940"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/search_history_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:background="@drawable/fg_normal_focusable"
        android:fontFamily="sans-serif-medium"
        android:padding="4dp"
        android:text="@string/clear_history"
        android:textColor="?attr/colorAccent"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@id/search_history_header"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_history_rv"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/search_history_header"
        tools:listitem="@layout/rv_search_history" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_hot_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="hot_search_header,hot_search_rv" />


    <TextView
        android:id="@+id/hot_search_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="16dp"
        android:text="@string/hot_search"
        android:textColor="@color/color_292940"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/search_history_rv" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/hot_search_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/hot_search_header"
        tools:listitem="@layout/rv_hot_search" />
</androidx.constraintlayout.widget.ConstraintLayout>