<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LoginContainerActivity"
    android:orientation="vertical">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        app:counterEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_username_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/username_hint"
            android:drawablePadding="16dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:drawableStart="@drawable/ic_login_username" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:passwordToggleEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="16dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:drawableStart="@drawable/ic_login_password"/>
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">
<!--        <Button-->
<!--            android:id="@+id/login_register"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginEnd="4dp"-->
<!--            android:text="@string/register"-->
<!--            android:background="@drawable/button_accent_stroke"-->
<!--            android:textColor="?attr/colorAccent"-->
<!--            android:layout_weight="1" />-->
        <Button
            android:id="@+id/login_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/color_white"
            android:background="@drawable/button_solid_accent"
            android:enabled="false"
            android:text="@string/login" />
    </LinearLayout>
    <com.github.welcomeworld.bangumi.instrumentality.project.source.bili.widget.BiliWebView
        android:id="@+id/validator_web"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:layout_marginTop="40dp" />
</LinearLayout>